# bensira-xml

./: README.md
raw_files/: ms_11QPsa.xml  ms_2Q18.xml  ms_a.xml  ms_b.xml  ms_c.xml  ms_d.xml  ms_e.xml  ms_f.xml  ms_masada.xml  ms_massada.xml
tei_displayer/: add_missing_tags.ipynb  create_dtd_from_XML.ipynb  fix_tags_label.ipynb  readme.txt  to_html.py  to_html_fix.ipynb  to_html_fix_lxml.ipynb
tei_displayer/htmls/: bs_manuscript.html  ms_11QPsa.html  ms_2Q18.html  ms_a.html  ms_b.html  ms_c.html  ms_d.html  ms_e.html  ms_f.html  ms_masada.html  ms_massada.html  readme.txt  styles.css  to_html.xslt
tei_displayer/htmls_lxml/: ms_11QPsa.html  ms_2Q18.html  ms_a.html  ms_b.html  ms_e.html  ms_f.html  ms_massada.html
tei_files/: ms_11QPsa.xml  ms_2Q18.xml  ms_a.xml  ms_b.xml  ms_c.xml  ms_d.xml  ms_e.xml  ms_f.xml  ms_masada.xml  ms_massada.xml
tei_transformer/: pyproject.toml
tei_transformer/src/tei_transformer/: __init__.py  cli.py  tei_transformer.py
tei_transformer/src/tests/: test.xml  test_tei_normalizer.py
tei_transformer/src/tests/test_data/: ms_to_clean_blank_space.xml  ms_to_clean_combined_chapter_verse.xml  ms_to_clean_reconstructed.xml  ms_to_clean_several_folio.xml  ms_to_clean_standard_verse.xml  temp.xml
xml_tei_revised/: ms_c.xml  ms_d.xml  ms_e.xml
